Make sure wsu-signature is above spine z-index

--- a/styles/sass/spine.scss
+++ b/styles/sass/spine.scss
@@ -181,6 +181,7 @@ footer.looseleaf {
 	text-indent: 120%;
 	overflow: hidden;
 	white-space: nowrap;
+	position: relative;
 	}
 html.no-svg #wsu-signature {
 	xxbackground-image: url('//repo.wsu.edu/spine/1/marks/wsu-signature-vertical.png');
